gccida/g3/record_giv
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6076:1: error: unknown type name 'induction_1'
induction_1 *v, 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6084:1: error: must use 'enum' tag to refer to type 'g_types'
g_types type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6093:4: error: expected ';' after expression
rtx v18; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6093:5: error: use of undeclared identifier 'v18'
rtx v18; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6095:4: error: expected ';' after expression
rtx v20; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6095:5: error: use of undeclared identifier 'v20'
rtx v20; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6107:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6115:4: error: expected ';' after expression
rtx rtwint; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6115:5: error: use of undeclared identifier 'rtwint'; did you mean 'rtuint'?
rtx rtwint; // rax 
    ^~~~~~
    rtuint
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6105:9: note: 'rtuint' declared here
__int64 rtuint; // rax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6120:4: error: expected ';' after expression
rtx v45; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6120:5: error: use of undeclared identifier 'v45'
rtx v45; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6134:4: error: expected ';' after expression
rtx v59; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6134:5: error: use of undeclared identifier 'v59'
rtx v59; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6142:4: error: expected ';' after expression
rtx dest_rega; // [rsp+8h] [rbp-80h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6142:5: error: use of undeclared identifier 'dest_rega'; did you mean 'dest_reg'?
rtx dest_rega; // [rsp+8h] [rbp-80h] BYREF 
    ^~~~~~~~~
    dest_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6079:5: note: 'dest_reg' declared here
rtx dest_reg, 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6144:4: error: expected ';' after expression
rtx mult_vala; // [rsp+18h] [rbp-70h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6144:5: error: use of undeclared identifier 'mult_vala'; did you mean 'mult_val'?
rtx mult_vala; // [rsp+18h] [rbp-70h] BYREF 
    ^~~~~~~~~
    mult_val
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6080:5: note: 'mult_val' declared here
rtx mult_val, 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6145:4: error: expected ';' after expression
rtx v70; // [rsp+20h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6145:5: error: use of undeclared identifier 'v70'; did you mean 'v50'?
rtx v70; // [rsp+20h] [rbp-68h] 
    ^~~
    v50
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/loop.c:6125:9: note: 'v50' declared here
__int64 v50; // rbp 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_giv/src/obj/loop.o] Error 1
